@@ -1,3 +1,7 @@
+DarkIce next release
+
+    o bug fix: maximum bitrate setting fixed for Ogg Vorbis streams
+
 20-08-2002: DarkIce 0.11 released
 
     o added possibility to specify maximum bitrate for Ogg Vorbis streams
